Bug 657634 Don't use high resolution scrolling when scrolling speed is customized by prefs r=smaug